--- a/package.json
+++ b/package.json
@@ -85,5 +85,5 @@
     "lint": "eslint ./src ./test && flow",
     "test": "NODE_ENV=test ava --verbose --serial"
   },
-  "version": "1.1.0"
+  "version": "3.0.0-local"
 }
