--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   },
   "dependencies": {
     "cartesian": "^1.0.1",
-    "date-fns": "^2.9.0",
-    "roarr": "^2.15.2"
+    "date-fns": "^2.9.0"
   },
   "description": "Extracts time from an arbitrary text input.",
   "devDependencies": {
@@ -34,6 +33,7 @@
     "ava": "^3.1.0",
     "babel-plugin-istanbul": "^6.0.0",
     "coveralls": "^3.0.9",
+    "esbuild": "0.24.0",
     "eslint": "^6.8.0",
     "eslint-config-canonical": "^18.1.0",
     "flow-bin": "^0.117.0",
@@ -81,6 +81,7 @@
   },
   "scripts": {
     "build": "rm -fr ./dist && NODE_ENV=production babel ./src --out-dir ./dist --copy-files --source-maps && flow-copy-source src dist",
+    "bundle": "esbuild dist/index.js --bundle --outfile=bundle/extract-time.js --format=esm",
     "create-readme": "gitdown ./.README/README.md --output-file ./README.md",
     "lint": "eslint ./src ./test && flow",
     "test": "NODE_ENV=test ava --verbose --serial"
