--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "ava": "^3.1.0",
     "babel-plugin-istanbul": "^6.0.0",
     "coveralls": "^3.0.9",
-    "esbuild": "0.24.0",
+    "esbuild": "^0.24.0",
     "eslint": "^6.8.0",
     "eslint-config-canonical": "^18.1.0",
     "flow-bin": "^0.117.0",
